--- a/amneziawg-go/Makefile
+++ b/amneziawg-go/Makefile
@@ -1,1 +1,51 @@
-#hello
+# This is free software, licensed under the MIT License.
+
+include $(TOPDIR)/rules.mk
+
+PKG_NAME:=amneziawg-go
+PKG_VERSION:=0.2.8
+PKG_RELEASE:=$(AUTORELEASE)
+
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://github.com/amnezia-vpn/amneziawg-go/archive/refs/tags/v${PKG_VERSION}
+PKG_HASH:=e26fa72eea51a8e8629de7ec8247eef16c8fddb05f15ef7133a04404f29c3d55
+
+PKG_LICENSE:=MIT
+PKG_LICENSE_FILES:=LICENSE
+
+PKG_BUILD_DEPENDS:=golang/host
+PKG_BUILD_PARALLEL:=1
+PKG_BUILD_FLAGS:=no-mips16
+
+GO_PKG:=github.com/amnezia-vpn/amneziawg-go
+GO_PKG_LDFLAGS_X:=\
+	main.Build=$(PKG_VERSION)
+
+include $(INCLUDE_DIR)/package.mk
+include ../../packages/lang/golang/golang-package.mk
+
+define Package/amneziawg-go
+  SECTION:=net
+  CATEGORY:=Network
+  TITLE:=AmneziaWG userspace implementation program (amneziawg-go)
+  DEPENDS:=$(GO_ARCH_DEPENDS)
+endef
+
+define Build/Compile
+  $(call GoPackage/Build/Compile)
+endef
+
+define Package/amneziawg-go/description
+  AmneziaWG is a contemporary version of the WireGuard protocol. It's a fork of
+  WireGuard-Go and offers protection against detection by Deep Packet Inspection
+  (DPI) systems. At the same time, it retains the simplified architecture and
+  high performance of the original.
+endef
+
+define Package/amneziawg-go/install
+	$(call GoPackage/Package/Install/Bin,$(PKG_INSTALL_DIR))
+	$(INSTALL_DIR) $(1)/usr/bin
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/amneziawg-go $(1)/usr/bin/amneziawg-go
+endef
+
+$(eval $(call BuildPackage,amneziawg-go))
